samples/_failures_safe/1761261624_e94145_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79060169.c: In function ‘main’:
./samples/SAFE/__tmp_79060169.c:180:5: error: expected declaration or statement at end of input
  180 |     }
      |     ^
